@@ -577,6 +577,10 @@
 					RelativePath=".\MediaInfo\Video\File_Vc1.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\MediaInfo\Video\File_Vc3.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Image"
@@ -1381,6 +1385,10 @@
 				</File>
 				<File
 					RelativePath=".\MediaInfo\Video\File_Vc1.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MediaInfo\Video\File_Vc3.h"
 					>
 				</File>
 			</Filter>
